--- a/MarsArchive/Base.lproj/Main.storyboard
+++ b/MarsArchive/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
         <scene sceneID="nj6-zR-frb">
             <objects>
                 <navigationController storyboardIdentifier="RoversViewControllerNav" automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="crossDissolve" id="1gw-pr-LCw" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="NJ8-JH-NeU">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NJ8-JH-NeU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.97254901959999995" green="0.52549019610000003" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -473,22 +473,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdk-Xq-fZG">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yB8-i6-5y7">
                                 <rect key="frame" x="0.0" y="40" width="414" height="646"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yB8-i6-5y7">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="646"/>
-                                    </imageView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="yB8-i6-5y7" secondAttribute="trailing" id="UDz-2d-tig"/>
-                                    <constraint firstItem="yB8-i6-5y7" firstAttribute="centerY" secondItem="hdk-Xq-fZG" secondAttribute="centerY" id="cH5-xh-AnO"/>
-                                    <constraint firstItem="yB8-i6-5y7" firstAttribute="leading" secondItem="hdk-Xq-fZG" secondAttribute="leading" id="i5v-9W-IJP"/>
-                                    <constraint firstItem="yB8-i6-5y7" firstAttribute="top" secondItem="hdk-Xq-fZG" secondAttribute="top" id="m4K-e1-mmW"/>
-                                    <constraint firstAttribute="bottom" secondItem="yB8-i6-5y7" secondAttribute="bottom" id="rhg-tf-Y6S"/>
-                                    <constraint firstItem="yB8-i6-5y7" firstAttribute="centerX" secondItem="hdk-Xq-fZG" secondAttribute="centerX" id="wbc-B1-cxD"/>
-                                </constraints>
-                            </scrollView>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="K7Z-Jt-nsf">
                                 <rect key="frame" x="0.0" y="656" width="414" height="80"/>
                                 <color key="backgroundColor" red="0.066666666666666666" green="0.066666666666666666" blue="0.066666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -502,19 +489,18 @@
                         </subviews>
                         <color key="backgroundColor" red="0.066666666666666666" green="0.066666666666666666" blue="0.066666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="hdk-Xq-fZG" firstAttribute="top" secondItem="ZAv-Hy-YjB" secondAttribute="top" constant="40" id="JwH-qe-pkR"/>
+                            <constraint firstItem="yB8-i6-5y7" firstAttribute="leading" secondItem="ZAv-Hy-YjB" secondAttribute="leadingMargin" constant="-20" id="Jzl-eE-BlB"/>
                             <constraint firstItem="K7Z-Jt-nsf" firstAttribute="leading" secondItem="ZAv-Hy-YjB" secondAttribute="leading" id="LkS-Xr-Uuc"/>
-                            <constraint firstAttribute="bottom" secondItem="hdk-Xq-fZG" secondAttribute="bottom" constant="50" id="Z3u-VH-d6I"/>
+                            <constraint firstItem="yB8-i6-5y7" firstAttribute="top" secondItem="ZAv-Hy-YjB" secondAttribute="top" constant="40" id="Tbp-IA-PkI"/>
                             <constraint firstItem="K7Z-Jt-nsf" firstAttribute="bottom" secondItem="ZAv-Hy-YjB" secondAttribute="bottomMargin" id="cfw-zo-oUo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yB8-i6-5y7" secondAttribute="trailing" constant="-20" id="hWs-iy-pf1"/>
+                            <constraint firstAttribute="bottom" secondItem="yB8-i6-5y7" secondAttribute="bottom" constant="50" id="kcV-2s-u9a"/>
                             <constraint firstAttribute="trailing" secondItem="K7Z-Jt-nsf" secondAttribute="trailing" id="weH-fW-BxA"/>
-                            <constraint firstAttribute="trailing" secondItem="hdk-Xq-fZG" secondAttribute="trailing" id="xtv-YW-MMa"/>
-                            <constraint firstItem="hdk-Xq-fZG" firstAttribute="leading" secondItem="ZAv-Hy-YjB" secondAttribute="leading" id="ys6-kb-Cvq"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="descriptionLabel" destination="K7Z-Jt-nsf" id="ySE-D8-GjX"/>
                         <outlet property="imageView" destination="yB8-i6-5y7" id="mTt-8Y-9Ib"/>
-                        <outlet property="scrollView" destination="hdk-Xq-fZG" id="md9-R2-QlS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cVK-pZ-qb1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -524,7 +510,7 @@
         <!--Gallery Page View Controller-->
         <scene sceneID="cC3-ia-CDw">
             <objects>
-                <pageViewController storyboardIdentifier="GalleryPageViewController" autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="ttj-nv-cAk" customClass="GalleryPageViewController" customModule="MarsArchive" customModuleProvider="target" sceneMemberID="viewController">
+                <pageViewController storyboardIdentifier="GalleryPageViewController" autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" transitionStyle="scroll" pageSpacing="6" navigationOrientation="horizontal" spineLocation="none" doubleSided="YES" id="ttj-nv-cAk" customClass="GalleryPageViewController" customModule="MarsArchive" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="izn-6v-Ogu">
                         <barButtonItem key="backBarButtonItem" title="Back" id="YNu-oL-4hg"/>
                         <rightBarButtonItems>
